fix some deprecate methods